# AgentSecGateway

./: .dockerignore  .gitignore  CONTENT_PLAN.md  DOMAIN_SETUP.md  Dockerfile  FIRST_CUSTOMERS.md  LAUNCH_CHECKLIST.md  LAUNCH_POSTS.md  MONEY_PLAN.md  OUTREACH_MESSAGES.md  PRODUCTION_SETUP_CHECKLIST.md  PRODUCT_ROADMAP.md  PWA_QA_CHECKLIST.md  README.md  TREND_ANALYSIS.md  WORK_DONE_SUMMARY.txt  dashboard.html  dashboard.js  docker-compose.yml  install-prompt.js  policy.example.json  pyproject.toml  requirements-server.txt
.github/ISSUE_TEMPLATE/: audit-request.md
.github/workflows/: agentsec.yml  audit-request.yml  ci.yml  pages.yml
_site/: CNAME.example  app.js
agentsec_scan/: __init__.py  __main__.py  cli.py  models.py  policy.py  report.py  rules.py  scanner.py
examples/: mcp-config.yaml
examples/risky-skill/: SKILL.md
examples/safe-skill/: SKILL.md
outreach/: email-sequence.md  follow-up-notes.md  linkedin-dm-sequence.md  targets.csv
proposals/: enterprise-proposal.md  starter-proposal.md  team-proposal.md
scripts/: analyze_trendshift.py  verify_production_flow.py
server/: Dockerfile  app.py
site/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  manifest.webmanifest  styles.css  sw.js
tests/: test_scanner.py  test_server.py
